--- a/.golangci.yml
+++ b/.golangci.yml
@@ -5,11 +5,19 @@ issues:
         - gocyclo
         - gosec
         - dupl
+    - path: handlers # disable needing to document handlers
+      linters:
+        - revive
 
     # Exclude some gosec messages project-wide
     - linters:
         - gosec
       text: "weak cryptographic primitive"
+    # Exclude exported type from needing to be documented
+    - linters:
+        - revive
+      text: "type"
+
   include:
     - EXC0012  # EXC0012 revive: Annoying issue about not having a comment. The rare codebase has such comments
     - EXC0014  # EXC0014 revive: Annoying issue about not having a comment. The rare codebase has such comments
