change datacenter from Romania to Netherlands (closer to the database)

--- a/src/fly.toml
+++ b/src/fly.toml
@@ -4,7 +4,7 @@
 #
 
 app = "portfolio-cms-server"
-primary_region = "otp"
+primary_region = "ams"
 
 [build]
   builder = "paketobuildpacks/builder:base"
